# OpenMusic

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
docs/: code-standards.md  codebase-summary.md  design-guidelines.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md  tech-stack.md
docs/wireframes/: beat-maker.html  lyrics-editor.html  main-layout.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: claude_code.rs  cliproxyapi.rs  cliproxyapi_commands.rs  cliproxyapi_manager.rs  commands.rs  gemini_cli.rs  manager.rs  mod.rs  openai.rs  provider.rs  types.rs
src-tauri/src/audio/: commands.rs  controller.rs  engine.rs  mod.rs  types.rs
src-tauri/src/midi/: commands.rs  input.rs  mod.rs  output.rs  types.rs
src/components/ai/: ai-command-palette-trigger.tsx  ai-command-palette.tsx
src/components/layout/: app-shell.tsx  header.tsx  player-bar.tsx  sidebar.tsx  tab-navigation.tsx
src/components/player/: play-button.tsx  progress-bar.tsx  volume-slider.tsx
src/components/project/: project-selector.tsx
src/components/ui/: button.tsx  card.tsx  (+3 more)
src/hooks/: use-ai-skills.ts  use-ai.ts  use-app-context.ts  use-audio.ts  use-beat-sequencer.ts  use-theme.ts
src/lib/: tauri-api.ts
src/stores/: ai-palette-store.ts  ai-settings-store.ts  beats-store.ts  i18n-store.ts  lyrics-store.ts  player-store.ts  project-store.ts  settings-store.ts  ui-store.ts
(+40 files in other folders)
